[project]
name = "davinci-resolve-checker"
version = "0.1.0"
description = "Check system configuration for DaVinci Resolve compatibility on Arch-based Linux"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "cyclopts>=3.0",
    "distro>=1.8",
    "pydantic>=2.0",
    "pylspci>=0.4",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "babel>=2.14",
    "pip-audit>=2.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
davinci-resolve-checker = "davinci_resolve_checker.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"src/davinci_resolve_checker/probes/**" = ["S602", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["davinci_resolve_checker"]
omit = ["src/davinci_resolve_checker/__main__.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
