[project]
name = "davinci-resolve-checker"
dynamic = ["version"]
description = "Check system configuration for DaVinci Resolve compatibility on Arch-based Linux"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "cyclopts>=3.0",
    "distro>=1.8",
    "pydantic>=2.0",
    "pylspci>=0.4",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/mordor-forge/davinci-resolve-checker"
Repository = "https://github.com/mordor-forge/davinci-resolve-checker"
Issues = "https://github.com/mordor-forge/davinci-resolve-checker/issues"

[project.scripts]
davinci-resolve-checker = "davinci_resolve_checker.cli:app"

[tool.hatch.version]
path = "src/davinci_resolve_checker/__init__.py"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"src/davinci_resolve_checker/probes/**" = ["S602", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["davinci_resolve_checker"]
omit = ["src/davinci_resolve_checker/__main__.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
